@@ -10,6 +10,7 @@
 
 [DEFAULT]
 
+# "ignoreip" can be an IP address, a CIDR mask or a DNS host
 ignoreip = 127.0.0.1
 bantime  = 600
 maxretry = 3
